--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -10,8 +10,8 @@
     <p><a href="index.html">Go back</a></p>
 
     <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
-    <button type="button" data-stop>Stop</button>
+    <button class="button" type="button" data-start>Start</button>
+    <button class="button" type="button" data-stop>Stop</button>
 
     <div class="timer">
       <div class="field">
